--- a/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/arduino.mdx
+++ b/docs/use-the-network/devices/development/adafruit-feather-m0-rfm95/arduino.mdx
@@ -17,7 +17,7 @@ import TabItem from "@theme/TabItem";
 :::important 
 
 Before we begin, please make sure you've followed the steps from
-this guide, which goes over some initial setup steps. 
+the Console quickstart [here](/use-the-network/console/quickstart). 
 
 :::
 
