first pass at maker content (#115)
* first pass at maker content

* simplifying Mine HNT further

* fixing homepage links

* final bit of clean up

* fix security group image (#125)

Co-authored-by: mark@helium.com <mark@helium.com>
Co-authored-by: Louis Thiery <louis@helium.com>

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -18,7 +18,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 			<div>
 				<a href="/blockchain"><span class="badge badge--secondary">Developers</span></a>
 				<a href="/mine-hnt"><span class="badge badge--secondary">Miners</span></a>
-				<a href="/community-governance"><span class="badge badge--secondary">Supporters</span></a>
+				<a href="/community-governance"><span class="badge badge--secondary">Community</span></a>
 			</div>
 		</div>
 		<div class="col col--8">
@@ -62,19 +62,18 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 	    <div class="col col--6 " style={{marginBottom: 100}}>
 	   		<img className="homeicon" src={useBaseUrl("img/home/mineicon.png")} />
 	    	<h3>Mine $HNT</h3>
-	    	<p className="podtext">Miners create The People’s Network, a long-range wireless coverage for very low power and inexpensive IoT devices and are rewarded $HNT for doing so.</p>
+	    	<p className="podtext">Hotspots create The People’s Network, a long-range wireless coverage for very low power and inexpensive IoT devices and are rewarded $HNT for doing so.</p>
 	    	<a href="/mine-hnt">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    	<h5>Quick Links</h5>
 	    	<a className="block" href="/mine-hnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> What is a Helium Miner?</a>
-	    	<a className="block" href="/mine-hnt/prebuilt-hotspots"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Prebuilt Hotspots</a>
-	    	<a className="block" href="/mine-hnt/build-a-hotspot"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Build a Hotspot</a>
-	    	<a className="block" href="/mine-hnt/convert-lorawan-gateway"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Convert a LoRaWAN Gateway</a>
-	    	<a className="block" href="/mine-hnt/run-a-miner"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a Miner</a>
+	    	<a className="block" href="https://helium.com/mine"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Approved Hotspots</a>
+	    	<a className="block" href="/mine-hnt/hotspot-makers"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Hotspot Makers</a>
+			<a className="block" href="/mine-hnt/build-a-packet-forwarder"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Build a Packet Forwarder</a>
 	    </div>
 	    <div class="col col--6 "  style={{marginBottom: 100}}>
 		    <img className="homeicon" src={useBaseUrl("img/home/useicon.png")} />
 		    <h3>Use the Helium Network</h3>
-		    <p className="podtext">The Helium Ecosystem includes thousands of ready-to-use devices, powerful integrations and robust developer tools.</p>
+		    <p className="podtext">The Helium Ecosystem includes thousands of ready-to-use devices, powerful integrations, and robust developer tools.</p>
 		    <a href="/use-the-network">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 		    <h5>Quick Links</h5>
 		    <a className="block" href="/use-the-network/devices/ready-to-use"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Ready to Use Devices</a>
