--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -1,13 +1,171 @@
 ---
-id: run-a-miner
+id: build-a-packet-forwarder
 hide_title: true
-sidebar_label: Run a Miner
-slug: /mine-hnt/run-a-miner
+sidebar_label: Build a Packet Forwarder
+slug: /mine-hnt/build-a-packet-forwarder
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Run Your Own Miner
+# Build a Packet Forwarder
+
+:::warning 
+
+The ability to mine HNT with anything other than [Approved Hotspots](https://helium.com/mine) is 
+not yet supported. Please join the Helium Discord Server and the #hotspot-diy-hardware channel for
+the latest updates on the roadmap here.
+
+:::
+
+## Packet Forwarder Architecture
+
+
+<img src={useBaseUrl("img/mine-hnt/mine-hnt-arch.png")} />
+
+To be a Helium Miner, there are three principle components to know about
+
+- **Packet Forwarder**: this is a utility that interacts with the radio
+  front-end and sends and receives raw radio packets with the Helium Miner
+- **Miner**: the Helium Blockchain comes into the picture here; the Miner is
+  responsible for routing packets to the appropriate Router (see our Routing
+  article) entering into microtransactions brokered via libp2p
+- **Router**: a Helium compatible LoRaWAN Network Server, basically; this
+  component is interested in receiving the packets relating to its devices and
+  handles downlink responses when appropriate
+
+When you buy [a prebuilt Hotspot](/mine-hnt/prebuilt-hotspots), you are
+buying a Packet Forwarder and a Miner in a convenient package. Everything is
+ready to go from the moment you plug it in and the device is kept up to date by
+Helium, Inc.
+
+However, any device that can run an 8 channel LoRa front-end (such as SX1301 or
+SX1302) can be used to participate in the Helium Network. The Miner is designed
+to send and receive packets using the Semtech Gateways Messaging Protocol
+(GWMP), making it compatible with almost every LoRaWAN Gateway on the Market.
+[We have guides for several LoRaWAN Gateways](/mine-hnt/convert-lorawan-gateway)
+that work very well and using one of them gives you one less thing to worry
+about as the Packet Forwarder is setup and ready to go.
+
+This guide, however, is for those that want a more hands-on experience. We will
+essentially be assembling a LoRaWAN gateway with discrete parts, loading up an
+open-source Linux distribution, compiling the packet forwarder, and running it
+all ourselves. In short, we'll be learning gateways that hard way!
+
+<center>
+  <i>
+    This guide is experimental and for advanced users only, and you may run in
+    to various issues trying to get this working.
+  </i>
+</center>
+
+### Example Custom Hardware
+
+If you don’t have your own hardware yet, we recommend using a Raspberry Pi 4B
+running the latest
+[64-bit RaspiOS](https://downloads.raspberrypi.org/raspios_arm64/images/) image.
+
+We recommend this configuration in particular if you are interested in running
+the Miner on the gateway itself; it's easy to run
+[our Docker image from Quay](https://quay.io/repository/team-helium/miner) on a
+64-bit ARM system. If you choose to run the Miner elsewhere, it's possible to
+downgrade all the way to a Pi0, for example, since you will only be running the
+packet forwarder on the gateway.
+
+RAK Wireless sells multiple "Pi Hats" that provide the 8-channel front-end:
+
+- [the RAK2245 (SX1301)](https://store.rakwireless.com/products/rak2245-pi-hat?variant=22914482733156)
+- [the RAK2287 (SX1302)](https://store.rakwireless.com/collections/wislink-lpwan/products/rak2287-lpwan-gateway-concentrator-module?variant=34533841535134)
+
+Or you can check out their
+[WisGate Developer](https://store.rakwireless.com/collections/wisgate-developer)
+line where they provide bundles:
+
+- the D3/D3+/D4/D4+/D4P are all based off of the RAK2245
+- the D4H is based off of the RAK2245
+
+Ultimately, which configuration works for you depends on your situation, but all
+of them will work with this guide with little adjustment.
+
+### Preparing the SD Card
+
+You can create an SD card from this image by looking for the recently inserted
+SD card in your system
+
+```
+$ ls -al /dev | grep sd
+```
+
+Generally, the timestamp is enough to indicate which device is the SD card. Next
+write the image to the SD card. For example:
+
+```
+dd if=~/2020-08-20-raspios-buster-arm64.img of=/dev/sdX bs=1M
+```
+
+Use the command `sync` to make sure the filesystem is written before trying to
+remove the SD card. Once the `sync` command returns, you can eject and remove
+the SD card from your system.
+
+## Preparing RaspiOS
+
+With a keyboard, mouse, and monitor plugged in, power on the Raspberry Pi.
+Proceed through the guided RaspiOS setup where you will update your password,
+configure your WiFi, etc.
+
+Enable SPI and I2C using the raspi-config tool: `sudo raspi-config`
+
+Select `Interface Options`, and enable `I2C` and `SPI` from within the menu
+system. This is also a good time to enable SSH if you want it.
+
+## Installing the Semtech Packet Forwarder
+
+Depending on which SX130x radio you are running, you will want to select the
+appropriate packet forwarder application.
+
+#### Packet Forwarder SX1302
+
+Pull down Helium's fork of the SX1302 packet forwarder:
+
+`git clone https://github.com/helium/sx1302_hal.git`
+
+Go into the directory and build:
+
+```
+$ cd sx1302_hal
+$ make
+```
+
+Next, go into the the packet_forwarder directory, where we will create a link to
+the reset script:
+
+```
+$ cd packet_forwarder
+$ ln -s ../tools/reset_lgw.sh reset_lgw.sh
+```
+
+We will also create a link to the appropriate regional configuration. For
+example:
+
+```
+ln -s global_conf.json.sx1250.US915 global_conf.json
+```
+
+We are now ready to test the start-up. From `~/sx1302_hal/packet_forwarder` try:
+
+```
+./lora_pkt_fwd
+```
+
+If you get the following output, you are good to go:
+
+```
+INFO: [main] concentrator started, packet can now be received
+INFO: concentrator EUI: 0x????????????????
+```
+
+With `CTRL+D`, exit out of the program and go to the next section.
+
+## Run the Miner
 
 Running a Helium Miner is a great way to get some exposure to the blockchain and
 to support the network. If you have your own hardware deployed, this is
@@ -101,7 +259,7 @@ For AWS, for example, you will want to configure the "Security Group" of your
 EC2 as so:
 
 <img
-  src={useBaseUrl("img/mine-hnt/run-a-miner/run-a-miner-security-group.png")}
+  src={useBaseUrl("img/mine-hnt/run-a-miner-security-group.png")}
 />
 
 ### Run a Docker Container
@@ -184,7 +342,7 @@ easier, but feel free to name the container whatever you want.
 The `--mount` with the parameters above will mount the container's `/var/data/`
 directory to the systems directory `/home/ec2-user/miner_data`.
 
-#### Configure AWS Instance for Sync
+### Configure AWS Instance for Sync
 
 Amazon EC2 instances have CPU usage credits that will easily be depleted during
 the initial sync of the blockchain. To avoid having your instance throttled, you
@@ -192,7 +350,7 @@ can temporarily uncap your instance by setting CPU credit usage to unlimited.
 Once your miner has reached full block height, a t2.small instance is sufficient
 to keep your miner running.
 
-#### Interact with the Miner within the Container
+### Interact with the Miner within the Container
 
 You may want to interrogate the Miner or interact with it it as described in the
 [using a miner section](/mine-hnt/run-a-miner#using-the-miner). Docker's
@@ -206,7 +364,7 @@ In other words, prepend `docker exec miner` to any of the commands documented in
 the [using a miner section](/mine-hnt/run-a-miner#using-the-miner)). Or
 create an alias such as: `alias miner="docker exec miner miner"`
 
-#### Updating the Docker Image
+### Updating the Docker Image
 
 From time to time, the Helium Miner is updated. Keep tabs on
 [the releases here](https://github.com/helium/miner/releases). Depending on
@@ -229,7 +387,7 @@ prefix to get you executing a command within the docker: `docker exec miner` .
 If you want to make it easier, you can always created an an alias such as:
 `alias miner="docker exec miner miner"`.
 
-#### Checking the logs
+#### Checking the Logs
 
 This is always helpful to get some idea of what's going on:
 
@@ -244,7 +402,7 @@ filter for `lora` as so:
 docker exec miner tail -f /var/log/miner/console.log | grep lora
 ```
 
-#### Checking the peer-to-peer network
+### Checking the P2P Network
 
 This is the first health check you can do to see how your Miner is doing. Is it
 finding other Helium miners over libp2p properly?
@@ -296,7 +454,7 @@ table at the bottom, you're connected to the p2p network and good to go.
 If you are having trouble, try forwarding port `44158` to the miner. On AWS,
 double check your security group settings.
 
-#### Checking Block Height
+### Checking Block Height
 
 As long as a genesis block is loaded, this query will work and return height 1
 at least:
@@ -324,7 +482,7 @@ simple curl command to check in a Terminal:
 {"data":{"height":280756}}
 ```
 
-#### Backing Up Your Swarm Keys
+### Backing Up Your Swarm Keys
 
 Periodically, we may release updates or you may want to migrate your miner from
 one machine to another. The most important thing is that you maintain a copy of
@@ -341,7 +499,7 @@ Another fun tidbit: for production hotspots sold by Helium, the swarm key is
 stored inside of a secure element and is thus unable to be migrated \(or
 compromised/accidentally lost unless physically damaged\).
 
-#### Backing up the Blockchain with Snapshots
+### Backing up the Blockchain with Snapshots
 
 Snapshots are summaries of the current state of the blockchain. Since you don't
 need every single block ever to sync with the blockchain, it's really just a
@@ -372,12 +530,29 @@ Sometimes the load command times out. If so, try to tail the logs and see if
 blocks are being applied. It's working just fine! It just needs a moment to
 finish loading the snapshot.
 
-#### Providing Coverage
 
-While participating in libp2p is helpful for the network, the Helium Blockchain
-does not exist for its own sake. It is there to incentivize coverage and one of
-the ways to earn tokens as a coverage provider for Helium is by routing IoT
-traffic.
+## Connecting to the Miner
 
-To learn more about this, check out the
-[build a Hotspot](/mine-hnt/build-a-hotspot) section.
+You're almost done. The last step after you have your Miner running is to connect to it. 
+
+With your favorite editor, open `global_conf.json` that lives in the packet
+forwarder directory:
+
+```
+nano ~/sx1302_hal/lora_pkt_fwd/global_conf.json
+```
+
+You want to change the field "server_address" from "localhost" the the IP
+address of the server, so in this case:
+
+You'll need to restart the packet forwarder for the configuration change to take
+effect.
+
+To verify that things are working, you can follow the logs on your miner. eg:
+
+```
+docker exec miner tail -f /var/log/miner/console.log | grep lora
+```
+
+At the very least, you should see PULL_DATA messages every few seconds. If so,
+then you've done it!
