--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -62,7 +62,7 @@ censorship-resistant transactions.
 
 ## The Consensus Group Election
 
-A new Consensus Group (CG) is elected once per epoch based a combination of
+A new Consensus Group (CG) is elected once per epoch based on a combination of
 factors. Currently there are `16` Miners elected to each consensus group, as
 defined in the `num_consensus_members` chain variable.
 
