--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -21,13 +21,13 @@ For statistics on HNT, [see the Market section on the Helium Explorer](https://e
 The Helium Token is designed to serve the needs of the two primary parties in
 the Helium blockchain ecosystem:
 
-1. **Hotspot Hosts and Network Operators**. Host
+1. **Hotspot Hosts and Network Operators**. Hosts
    [mine HNT](/blockchain/mining) while deploying and maintaining network
    coverage.
 2. **Enterprises and developers using the Helium Network** to connect devices
    and build IoT applications. Data Credits, which are a $USD-pegged utility token
    derived from HNT in a burn transaction,
-   [are used pay transaction fees](/blockchain/transaction-fees) for wireless
+   [are used to pay transaction fees](/blockchain/transaction-fees) for wireless
    data transmissions on the network (in addition to things like adding Hotspots
    and sending).
 
