--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -83,7 +83,7 @@ transmits the resultant packet to the Helium Network. Any number proximate geogr
 ### Witnesses 
 
 As of [HIP 15](https://github.com/helium/HIP/blob/master/0015-beaconing-rewards.md), Proof of Coverage 
-relies entirely on beaconing. A beacon is a single transmission witnesses by any Hotspot. Previous 
+relies entirely on beaconing. A beacon is a single transmission witnessed by any Hotspot. Previous 
 versions uses multi-hop challenge paths that didn't accurately test Hotspots on what they are built to do: 
 capture RF packets.
 
