Log directory changed to /var/data/log/

--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -551,7 +551,7 @@ effect.
 To verify that things are working, you can follow the logs on your miner. eg:
 
 ```
-docker exec miner tail -f /var/log/miner/console.log | grep lora
+docker exec miner tail -f /var/data/log/console.log | grep lora
 ```
 
 At the very least, you should see PULL_DATA messages every few seconds. If so,
