Chapter addition proposal
Unfortunately, I don't have the information to create the page. I'm looking for it currently to make the US902 version of my device.

--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -14,6 +14,9 @@ Thousands of developers and companies rely on the Helium Network for connectivit
 channels are the two most relevant for developers using the Network. 
 :::
 
+### Network settings
+
+* [Freqency Plan]()
 
 ### Devices 
 
