add console dc doc

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -24,6 +24,7 @@ Console is available as a free to use hosted application at
 
 * [Console Quickstart](/use-the-network/console/quickstart)
 * [Users and Organizations](/use-the-network/console/users)
+* [Data Credits](/use-the-network/console/data-credits)
 * [Adding Devices](/use-the-network/console/adding-devices)
 * [Migrating Devices](/use-the-network/console/migrating-devices)
 * [Labels](/use-the-network/console/labels)
