--- a/docs/use-the-network/console/data-credits.mdx
+++ b/docs/use-the-network/console/data-credits.mdx
@@ -9,7 +9,7 @@ slug: /use-the-network/console/data-credits
 
 Data Credits (DCs) are central to the Helium Blockchain and LongFi. Read about
 how they fit into our Tokenomics
-[here](https://docs.helium.com/blockchain/helium-token#data-credits-and-burn-and-mint-economics).
+[here](/blockchain/helium-token#data-credits-and-burn-and-mint-economics).
 
 Not only are DCs critical for asserting new Hotspots and their location on the
 blockchain, registering OUIs and devices, but they are also used to pay for
