adding hotspot integration testing, reworkig maker section

--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -17,6 +17,15 @@ the latest updates on the roadmap here.
 
 :::
 
+
+:::info 
+
+The `#hotspot-diy-hardware` channel in the [Helium Discord](https://discord.gg/helium) is a great community resource 
+for real-tume help when deploying a Helium Packet Forwarder. 
+
+:::
+
+
 ## Packet Forwarder Architecture
 
 
