--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -13,7 +13,11 @@ Any Helium-enabled Hotspot (sometimes called a **miner** or **gateway**) can min
 
 ### Hotspot Makers 
 
-Interested in becoming a **Hotspots Maker**? Any qualified company can be approved by the Helium community to manufacture and distribute Hotspots. [Learn more about the process and requirements here](/mine-hnt/hotspot-makers).
+Interested in becoming a **Hotspots Maker**? Any qualified company can be approved by the Helium community to manufacture and distribute Hotspots. 
+
+* [Approved Makers](/mine-hnt/hotspot-makers/approved-makers)
+* [Maker Approval and Auditing](/mine-hnt/hotspot-makers/maker-approval-auditing)
+* [Hotspot Integration Testing](/mine-hnt/hotspot-makers/hotspot-integration-testing)
 
 ### Approved Hotspots 
 
@@ -21,4 +25,4 @@ A full list of approved Hotspots with details on how to acquire them [can be fou
 
 ### Build a Helium Packet Forwarder
 
-As of today, only approved Hotspots can participate in mining $HNT. However, any LoRaWNAN Gateway can converted to route packets to the Helium Network for development and production applications. [Start here](/mine-hnt/build-a-packet-forwarder).
+As of today, only approved Hotspots can participate in mining $HNT. However, any LoRaWNAN Gateway can be converted to route packets to the Helium Network for development and production applications. [Start here](/mine-hnt/build-a-packet-forwarder).
