--- a/docs/mine-hnt/hotspot-makers/approved-makers.mdx
+++ b/docs/mine-hnt/hotspot-makers/approved-makers.mdx
@@ -1,33 +1,11 @@
 ---
-id: hotspot-makers
+id: approved-makers
 hide_title: true
-sidebar_label: Hotspot Makers
-slug: /mine-hnt/hotspot-makers
+sidebar_label: Approved Makers
+slug: /mine-hnt/hotspot-makers/approved-makers
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
-
-
-
-# Hotspot Makers
-
-Hotspot Manufacturers - commonly referred to as **Makers** - are hardware manufactures that have been approved by the Helium community and the [DeWi](https://dewi.org) to produce and distribute Helium-compatible miners to the Network. 
-
-
-## Maker Approval and Auditing Process
-
-Due to the overwhelming demand for Hotspots, the community designed and approved a process for adding new, verified manufactures to the ecosystem. [This is known has HIP19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md). With HIP19 in place, companies can submit an application to be reviewed by the community and the [DeWi](https://www.dewi.org/).
-
-The full process for approving and auditing new manafacturers is as follows ([originally outlined in this blog post](https://engineering.helium.com/2021/01/26/maker-audit.html)):
-
-1. Makers submit a HIP.
-2. DeWi and Community approve.
-3. Makers send hardware samples for Audit.
-4. Once Makers pass hardware audit, they are allowed to proceed to Network Integration.
-5. The final stage of Network Integration is being able to add Hotspots to the Onboarding Server.
-
- 
-## Approved Makers
+# Approved Makers
 
 [Helium, Inc.](https://helium.com) was the first Hotspot manufacturer. Starting in early 2019, they produced the first hardware capable of mining HNT and providing LoRaWAN wireless coverage. In total, Helium, Inc. produced and sold the first 13,000 Hotspots to the Helium community to seed the Network. 
 
@@ -41,4 +19,3 @@ Since the introduction of [HIP19](https://github.com/helium/HIP/blob/master/0019
 | [SyncroB.it](https://syncrob.it/)      	| [SyncroB.it](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/syncrobit.md) | 2020-12-14 |Not Yet Created|
 | [RAK Wireless/CalChip](https://www.calchipconnect.com/) | [RAK/CalChip](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/rak-wireless.md) | 2020-12-29 |[13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY](https://explorer.helium.com/accounts/13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY)|  
 | [EasyLinkin](http://www.easylinkin.net/)   | [EasyLinkin](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/easylinkin.md) | 2021-01-12 |Not Yet Created|
-
