--- a/docs/mine-hnt/hotspot-makers/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/hotspot-makers/hotspot-integration-testing.mdx
@@ -12,9 +12,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 This guide is intended for companies that have been approved via HIP19, or are considering submitting an application. 
 
-## Helium Hotspot Wallet App Compatibility
+## Hotspot App Compatibility
 
-For optimal user experience, we recommend Hotspots be equipped with compatible bluetooth and Wi-Fi functionality. This allows a seamless onboarding experience. 
+For optimal user experience, we recommend Hotspots be equipped with compatible Bluetooth and Wi-Fi functionality. This allows a seamless onboarding experience. 
 
 To add your Hotspot to the Hotspot App, [submit an issue and a pull request to the Hotspot Github Repo](https://github.com/helium/hotspot-app/). 
 
@@ -72,7 +72,7 @@ Once you’re ready to proceed, request a Maker account and replace the test pay
 
 Once you are confident that the transaction is sound and well crafted, request a Maker Account from your DeWi or Helium contact. In your request, include the Maker Name and how many location asserts you will include for your customers. A minimum of `1` included location assertion is required. That value is denoted under `locationNonceLimit`.
 
-All Maker Accounts are public on the blockchain [and can be found here](https://helium-onboarding-server.herokuapp.com/api/v2/makers). 
+All Maker Accounts are public on the blockchain [and can be found here](https://onboarding.dewi.org/api/v2/makers). 
 
 Make note of the `Payer` address. This is the account address you will burn HNT into to generate DCs for onboarding your Hotspots.
 
@@ -108,10 +108,10 @@ Remember, Data Credits are NON-TRANSFERABLE. Triple check that the `payee` addre
 When you’re ready to start integration with the Test Maker account with the mobile wallet app, send us details about your Test Hotspot in this JSON format:
 
 ```json
-"id": 6488, 
+"id": "any_number", 
 "mac_eth0": "dc:a6:32:d8:e7:5c", 
 "mac_wlan0": "dc:a6:32:d8:e7:5e", 
-"onboarding_address": "blah", 
+"onboarding_address": "retrieve this b58 address from mine", 
 "rpi_serial": "0000011031311847"
 ```
 
@@ -121,10 +121,10 @@ When you move to production, the JSON should be formatted like this. Note the ad
 
 ```json
 "batch": "batch_name",  
-"id": 6488, 
+"id": "any_number", 
 "mac_eth0": "dc:a6:32:d8:e7:5c", 
 "mac_wlan0": "dc:a6:32:d8:e7:5e", 
-"onboarding_address": "blah", 
+"onboarding_address": "retrieve this b58 address from mine", 
 "rpi_serial": "0000011031311847"
 ```
 
